--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,8 @@ authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
 serde = "1.0.197"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
-nalgebra = "0.32"
-cellular_raza = { git="https://github.com/jonaspleyer/cellular_raza/" }
-num = "0.4.1"
-rayon = "1.8"
-kdam = { version="0.5", features = ["template"] }
+cellular_raza = { path="../../cellular_raza/" }
+nalgebra = "0.32.4"
+rayon = "1.9.0"
+num.workspace = true
 
