--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
+module-name = "cellular_raza_template_pyo3.cellular_raza_template_pyo3_rs"
