--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib", "rlib"]
 serde = "1.0"
 rand = "0.9"
 rand_chacha = "0.9"
-cellular_raza = { version = "0.2", features = ["pyo3"]}
+cellular_raza = { git="https://github.com/jonaspleyer/cellular_raza", features = ["pyo3"]}
 nalgebra = "0.33"
 rayon = "1.9.0"
 num = "0.4"
