--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 name = "cellular_raza_template_pyo3"
 crate-type = ["cdylib", "rlib"]
 
+[patch.crates-io]
+nalgebra = { git = "https://github.com/dimforge/nalgebra" }
+ron = { git = "https://github.com/ron-rs/ron" }
+
 [dependencies]
 serde = "1.0"
 rand = "0.9"
