--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ cellular_raza = { git="https://github.com/jonaspleyer/cellular_raza", features =
 nalgebra = "0.33"
 rayon = "1.9.0"
 num = "0.4"
-pyo3 = "0.24"
+pyo3 = ">=0.24"
